{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Movement",
            "id": "b6377183-5696-48d1-83df-bbd9047c41ab",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0b66979e-cfb7-4562-9a91-ac453e15cdf3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "02c8d867-dc2a-43d0-87d8-26f2700a642f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "64d9ef86-a8a8-4508-b3bf-a692323d7a11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "382d41ec-4a42-4dce-9565-2c0294609ffd",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "cffef467-6718-4abf-a3eb-ad31a2b4f6e0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "24659148-f625-4c0f-8abf-c2e84086d56d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "603e8aad-61b1-45e4-924f-2856c6f77635",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fc6e6de1-c4b4-4d28-93d8-c69295957469",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "29a2cfbe-5ad2-46a5-8f2d-3db24efd31f6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8d60b07b-bd2f-4261-aa1f-1e67b1c4a15f",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "a632c822-9dea-47ad-a82a-406caadb3fed",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "6dece1c3-cddb-4bec-a73d-88f163c24fb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ca62c5b-9e6f-4db1-b971-36941aa787c5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "b60ee896-cd29-4cc0-bc52-53c060797da6",
            "actions": [
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "de805d95-9fe6-4451-9fad-dc78e7e4b9fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "576866a5-cee4-4a95-8e05-c1ec6652d6b6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}